clearfix technit 59 line

--- a/float-flex/float-basic.html
+++ b/float-flex/float-basic.html
@@ -56,7 +56,7 @@
     #post-box p span {
       font-weight: 500;
     }
-
+/* ********* 지워보고 테스트 할롬 ::after */
     #post-box p::after {
       content:"";
       display: block;
