--- a/float-flex/float-basic.html
+++ b/float-flex/float-basic.html
@@ -50,7 +50,7 @@
       margin-right: 1vw;
       font-weight: 200;
       font-size: 1rem;
-      align: 1.5rem;
+      align-content: 1.5rem;
     }
 
     #post-box p span {
