--- a/vertical-nav-layout/accodian-solution-2.html
+++ b/vertical-nav-layout/accodian-solution-2.html
@@ -80,7 +80,7 @@
 
     closeButton.addEventListener('click', function () {
       // closeButton을 'click' 하면 {} 알고리즘을 실행한다.
-      navUl.style.display = 'block';
+      navUl.style.display = 'none';
     });
 
     // ******************
