--- a/vertical-nav-layout/accodian-solution-3.html
+++ b/vertical-nav-layout/accodian-solution-3.html
@@ -109,7 +109,7 @@
     const closeButton = document.querySelector('#close-button');
 
     closeButton.addEventListener('click', function () {
-      navUl.style.display = 'block';
+      navUl.style.display = 'none';
     });
     navUl.addEventListener('mouseover', function (event) {
       event.target.style.backgroundColor = "#ff6666";
