--- a/vertical-nav-layout/accodian-solution-4.html
+++ b/vertical-nav-layout/accodian-solution-4.html
@@ -109,7 +109,7 @@
 
     }
     navUl.style.display = 'none';
-    nav.style.boxShdow = "5px 5px 5px 5px rgba(0, 0, 0, 1)";
+    navUl.style.boxShdow = "5px 5px 5px 5px rgba(0, 0, 0, 1)";
 
     openButton.addEventListener('click', function () {
       openButton.style.width = "10vw";
