solution -4 오류 수정

--- a/vertical-nav-layout/accodian-solution-4.html
+++ b/vertical-nav-layout/accodian-solution-4.html
@@ -109,7 +109,7 @@
 
     }
     navUl.style.display = 'none';
-    navUl.style.boxShdow = "5px 5px 5px 5px rgba(0, 0, 0, 1)";
+    nav.style.boxShadow = "2px 2px 2px 2px rgba(0, 0, 0, 0.2)";
 
     openButton.addEventListener('click', function () {
       openButton.style.width = "10vw";
