--- a/web-design-example/[20211125]web-design-example.html/2021-11-25-web-design-example-2.html
+++ b/web-design-example/[20211125]web-design-example.html/2021-11-25-web-design-example-2.html
@@ -26,19 +26,17 @@
 
   <div id="container">
     <section>
-      <h1>What do you design for?</h1>
+      <h1></h1>
       <div></div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, amet cupiditate. Modi eum repellendus
         impedit
         ad, aperiam eligendi omnis quisquam ipsum ut consectetur animi numquam soluta similique quis nulla unde!</p>
       <section></section>
-      <!-- <img src="./image/main-image-1.jpg" alt=""> -->
 
 
     </section>
-    <!-- <section></section>
-    <section></section>
-    <section></section> -->
+
+    <script src="./js/script.js"></script>
   </div>
 </body>
 
