forin, forof, forEach 설명

--- a/window-event/window-scrollY.html
+++ b/window-event/window-scrollY.html
@@ -32,6 +32,9 @@
       
       window.addEventListener('scroll', ()=> {
         console.log(window.scrollY);
+        if(window.scrollY > 1000) {
+          console.log('hello');
+        }
       });
 
     });
