--- a/question-list-example/2021-11-30-slideimage.html
+++ b/question-list-example/2021-11-30-slideimage.html
@@ -22,15 +22,15 @@
       font-size: 2rem;
     }
 
-    .image:nth-child(1) {
+    #slide .image:nth-child(1) {
       background-color: red;
     }
 
-    .image:nth-child(2) {
+    #slide .image:nth-child(2) {
       background-color: blue;
     }
 
-    .image:nth-child(3) {
+    #slide .image:nth-child(3) {
       background-color: yellow;
     }
   </style>
@@ -38,24 +38,52 @@
 
 <body>
   <div id="slide">
+    <!-- z-index 값을 역순으로 보이게 주는 것도 방법
+    <div class="image" style="z-index="3">1</div>
+    <div class="image" style="z-index="2">2</div>
+    <div class="image" style="z-index="1">3</div>
+    -->
     <div class="image">1</div>
     <div class="image">2</div>
     <div class="image">3</div>
   </div>
   <script>
-    var current = 0;
     const slideTage = document.querySelectorAll('.image');
     console.log(slideTage);
 
-    setInterval(function () {
-      for (let i = 0; i < slideTage.length; i++) {
-        slideTage[i].style.opacity = 0;
-      }
-      current = (current != slideTage.length - 1) ? current + 1 : 0;
-      // 물음표 연산자 평가대상인 current가 true라면 current에 1을 더해줘 아니라면 0으로 돌아가줘
-      // 왜 3번 이미지부터 시작하고 2번 갔다가 3번 갔다가 2->1순으로 반복하는걸까
+    // 강사 작성
+
+    // 삼항연산자 (조건식) ? 참 : 거짓; 활용
+    // 첫번째 전제 
+    // 마크업에 작성된 순서대로 작동되어야 한다.
+
+    // 사용하는 방법에 따라서는 for() loop 와 닮은 forEach() 배열 loop 메서드를 사용할 수도 있다.
+
+    let current = 0; // var 선언은 너무 유연하기 때문에 사용하지 않는다.
+    slideTage[0].style.zIndex = 1; // 첫번째 1번이 보여주게 하는 방식으로 초기설정 할 수도 있다.
+    let slideTimer = setInterval(() => {
+      slideTage.forEach((value, index) => {
+        slideTage[index].style.opacity = 0;
+        slideTage[index].style.zIndex = 0;
+      })
+      current = (current < slideTage.length - 1) ? current + 1 : 0;
+      console.log(current);
+      slideTage[current].style.zIndex = 1;
       slideTage[current].style.opacity = 1;
+
     }, 3000);
+
+    // 훈련생 작성
+
+    // setInterval(function () {
+    //   for (let i = 0; i < slideTage.length; i++) {
+    //     slideTage[i].style.opacity = 0;
+    //   }
+    //   current = (current != slideTage.length - 1) ? current + 1 : 0;
+    //   // 물음표 연산자 평가대상인 current가 true라면 current에 1을 더해줘 아니라면 0으로 돌아가줘
+    //   // 왜 3번 이미지부터 시작하고 2번 갔다가 3번 갔다가 2->1순으로 반복하는걸까
+    //   slideTage[current].style.opacity = 1;
+    // }, 3000);
 
   </script>
 </body>
