--- a/question-list-example/[2021-12-17]list-example/[2021-12-17]array-only-five.html
+++ b/question-list-example/[2021-12-17]list-example/[2021-12-17]array-only-five.html
@@ -6,6 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      width: 100vw;
+      height: 100vh;
+      background: rgb(233, 209, 153);
+      background: linear-gradient(0deg, rgba(233, 209, 153, 1) 0%, rgba(247, 222, 169, 1) 100%);
+
+      /* flex */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    ul {
+      list-style-type: none;
+      font-size: 3rem;
+      font-weight: 200;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,12 +64,11 @@
         container.children[0].style.opacity = '0.25';
         container.children[1].style.opacity = '0.5';
         container.children[2].style.opacity = '1';
-        container.children[2].style.color = 'salmon';
+        // container.children[2].style.color = 'salmon';
         container.children[3].style.opacity = '5';
         container.children[4].style.opacity = '0.25';
-
       }
-
+      
       // 배열의 마지막 원소값을 가져온다.
       // 길이값의 -1 이면 원소 마지막을 선택하는 꼴이된다.
       let getLastValue = liValue[liValue.length - 1];
@@ -53,10 +78,10 @@
       liValue.push(getLastValue + 1);
       console.log(liValue);
       // 만약 저장한 변수값이 50 이상이 되버리면 타이머를 끈다. 
-      if(getLastValue >= 50) {
+      if (getLastValue >= 50) {
         clearInterval(timer);
       }
-    }, 200);
+    }, 2000);
   </script>
 </body>
 
